# thread-playground

./: .gitignore  CMakeLists.txt  README.md
.gitea/workflows/: ci.yml
Containers/: README.md  build.sh  threadtest.yaml  threadtest2.yaml  threadtest3.yaml
Containers/threadtest/: Dockerfile
Containers/threadtestdebug/: Dockerfile
thread/: CMakeLists.txt  Thread.h  thread.cpp
